<resources>
    <string name="app_name">Button-counter-Conahan</string>
    <string name="counter">Cormac Counter</string>
    <string name="increment">Increment</string>
    <string name="numDisplay">0</string>
    <string name="decimal">Decimal</string>
    <string name="binary">Binary</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="decrement">Decrement</string>
    <string name="reset">Reset</string>
</resources>